# AuditGuard

./: .dockerignore  .gitignore  BUILD_ORDER.md  CODEX_RULES.md  Dockerfile  MASTER_SPEC.md  README.md  VALIDATION_CHECKLIST.md  client.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  rewards.py  task_registry.py
data/: task_easy_001.json  task_hard_001.json  task_medium_001.json  task_medium_002.json
server/: app.py  environment.py
tests/: test_fraud_rules.py  test_grader.py  test_task_registry.py
utils/: fraud_rules.py
