[project]
name = "auditguard"
version = "0.1.0"
description = "AuditGuard deterministic fraud detection agent"
authors = [{ name = "Antara Sanjay Utane" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests"
    ,"openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["server"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
